# x8086_simulator

./: .gitignore  CMakeLists.txt  OPCODE_NOTES.txt  PerformanceAwareCourse.sln  PerformanceAwareCourse.vcxproj  PerformanceAwareCourse.vcxproj.filters  README.md
listings/: listing_0046_add_sub_cmp.txt  listing_0056_estimating_cycles.txt
src/: CpuExecution.h  CpuMemory.h  CpuNames.h  CpuOperations.h  CycleEstimation.h  DecoderOperands.h  Defines.h  Helpers.h  OperationTypes.h  main.cpp
